# gmail-onedrive-filer

./: .gitignore  README.md  gmail_token_expired.sh  pyproject.toml
config/: triage-rules.md
src/gmail_onedrive_filer/: __init__.py  cli.py  config.py  filer.py  gmail_client.py  runner.py  state.py
tests/: test_cli.py  test_filer.py
